external-crates/move/crates/move-compiler/tests/move_2024/constants/cross_module_cycle.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02004]: invalid 'module' declaration
   ┌─ tests/move_2024/constants/cross_module_cycle.move:10:32
   │
10 │ public(package) const A: u64 = b::B + 1;
   │                                ^^^^ '0x42::b' uses '0x42::a'. This 'use' relationship creates a dependency cycle.
   ·
18 │ public(package) const B: u64 = a::A + 1;
   │                                ---- '0x42::a' uses '0x42::b'

error[E08001]: cannot compute constant value
   ┌─ tests/move_2024/constants/cross_module_cycle.move:10:32
   │
10 │ public(package) const A: u64 = b::B + 1;
   │                                ^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value

error[E08001]: cannot compute constant value
   ┌─ tests/move_2024/constants/cross_module_cycle.move:18:32
   │
18 │ public(package) const B: u64 = a::A + 1;
   │                                ^^^^^^^^ Invalid expression in 'const'. This expression could not be evaluated to a value
